:wolf: Fix result clip path on firefox

--- a/styles/graphic.sass
+++ b/styles/graphic.sass
@@ -26,10 +26,6 @@
       stop-color: $red
       stop-opacity: 0
 
-  clipPath
-    rect
-      transition: width $clippath-animation-duration
-
   .axis
     opacity: .5
 
