--- a/styles/variables.sass
+++ b/styles/variables.sass
@@ -4,7 +4,6 @@ $red: red
 $grey: #f0f0f0
 
 $gradient-opacity: 0.3
-$clippath-animation-duration: 0.7s
 $teasing-animation-duration: 4s
 
 $max-width: 996px
